set up flask server with stable connection

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Display Webcam Stream</title>
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="module" src="/static/js/index.js"></script>
 <link rel="shortcut icon" href="#"/>
  
 <style>
@@ -63,6 +64,5 @@
         });
     }
 </script>
-<script type="module" src="index.js"></script>
 </body>
 </html>
