--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,15 @@
     width: 100%;
     height: 50%;
 }
+.canvas_mirror {
+  height: 100%;
+  /* height: 200px; */
+  left: 0;
+  position: absolute;
+  top: 0;
+  /* width: 200px */
+  width: 100%; 
+}
 </style>
 </head>
  
@@ -46,7 +55,9 @@
 <div id="webcam-interaction">
     <div id="container">
         <video autoplay="true" id="webcamElement"></video>
-        <canvas id="canvas"></canvas>
+        <!-- <canvas id="canvas"></canvas> -->
+        <canvas hidden id="canvas"></canvas> 
+        <img hidden src="" id="mirror" class="canvas_mirror" />
     </div>
 </div>
 
