--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,10 @@
     font-family: 'Fredoka One', cursive;
     font-size: 60px;
 }
+#subheader {
+    padding-top: 10px;
+    font-family: 'Fredoka One', cursive;
+}
 #instructions {
     padding-left: 40px;
     padding-right: 40px;
@@ -94,6 +98,7 @@ body {
 <body>
     <div id="title">
         <h1 id="header">Let's learn ASL!</h1>
+        <h4 id="subheader">~with deep learning~</h4>
         <p id="instructions">
             Hello there! To get started, please allow this website to have camera access by clicking 'Allow' when prompted.
             Once you see yourself, click the button below to get a new word to sign! Sign one letter at a time to the camera and if you get the letter correct, it will turn green.
