--- a/templates/index.html
+++ b/templates/index.html
@@ -20,14 +20,22 @@
     position: relative;
 }
 #canvas {
-    margin: 0px auto;
+    /* margin: 0px auto; */
     /* width: 200px;
 	height: 200px; */
     width: 100%;
 	height: 100%;
-    position: relative;
     z-index: 1;
     /* background:transparent; */
+}
+.canvas_mirror {
+  /* height: 100%; */
+  height: 200px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 200px;
+  /* width: 100%;  */
 }
 #videoElement {
 	/* width: 200px;
@@ -44,15 +52,6 @@
     height: 50%;
     margin-bottom: 100px;
     margin-top: 20px;
-}
-.canvas_mirror {
-  /* height: 100%; */
-  height: 200px;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 200px;
-  /* width: 100%;  */
 }
 #title {
     margin: 0 auto;
@@ -75,7 +74,7 @@
     font-family: 'Didact Gothic', sans-serif;
 }
 #new-word {
-    margin-bottom: 20px;
+    margin-bottom: 16px;
 }
 #word-container {
     /* display: inline; */
